--- a/resources/back/sass/app.scss
+++ b/resources/back/sass/app.scss
@@ -14,14 +14,21 @@ body {
 
 .stories-list {
     .story {
+
         .story-info  {
-           
             justify-content: space-between;
             align-items: left;
             padding: 20px;
             h2{
                 text-transform: uppercase;
                 font-weight: bolder;
+            }
+        }
+        .photo {
+            margin: 0 10px;
+            img {
+                height: 100px;
+                width: auto;
             }
         }
        .story-amount  {
@@ -43,6 +50,27 @@ body {
         }
     }
 }
+
+
+}
+
+[data-gallery="0"] {
+    display: none;
+}
+
+span.rem {
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid crimson;
+    background-color: crimson;
+    border-radius: 50%;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
 }
        
     
