--- a/resources/front/sass/app.scss
+++ b/resources/front/sass/app.scss
@@ -97,3 +97,59 @@ span.rem {
     width: 30px;
     height: 30px;
 }
+
+.stars {
+    padding: 20px 0 0 0;
+    display: flex;
+    align-items: center;
+    position: relative;
+    [type=checkbox]+.star {
+        position: relative;
+        font-size: 30px;
+        color: crimson;
+        cursor: pointer;
+        user-select: none;
+        width: 25px;
+        &:after {
+            position: absolute;
+            content: '\1F90D'
+        }
+    }
+    [type=checkbox]:checked+.star {
+        &:after {
+            position: absolute;
+            content: '\1F90E'
+        }
+    }
+    [type=checkbox]+.star.half {
+        width: 25px;
+        &:before {
+            content: '\1F90E';
+            position: absolute;
+        }
+        &:after {
+            content: '\1F90D';
+            position: absolute;
+            width: 12px;
+            overflow: hidden;
+        }
+    }
+    [type=checkbox] {
+        display: none;
+    }
+    .result {
+        font-size: 20px;
+        font-weight: bold;
+        padding: 0 16px;
+        position: relative;
+        top: 26px;
+        span {
+            font-size: 14px;
+            font-weight: normal;
+        }
+    }
+    .btn {
+        position: relative;
+        top: 26px;
+    }
+}
