--- a/resources/back/sass/app.scss
+++ b/resources/back/sass/app.scss
@@ -73,6 +73,10 @@ span.rem {
     height: 30px;
 }
        
-    
+.gallery {
+    img {
+        width: 300px;
+        height: auto;
+    }    
         
-    
+}
