--- a/resources/back/sass/app.scss
+++ b/resources/back/sass/app.scss
@@ -9,7 +9,7 @@
 
 
 body {
-    background-image: url('../../back/images/fundme.png');
+    background-image: url('../../back/images/fundearth.jpg');
   }
 
 .stories-list {
@@ -45,7 +45,7 @@ body {
             }
             .buttons {
             display: flex;
-            justify-content: space-around;
+            justify-content: flex-end;
             gap: 10px;
         }
     }
@@ -79,4 +79,59 @@ span.rem {
         height: auto;
     }    
         
+}
+.stars {
+    padding: 20px 0 0 0;
+    display: flex;
+    align-items: center;
+    position: relative;
+    [type=checkbox]+.star {
+        position: relative;
+        font-size: 30px;
+        color: crimson;
+        cursor: pointer;
+        user-select: none;
+        width: 25px;
+        &:after {
+            position: absolute;
+            content: '\1F90D'
+        }
+    }
+    [type=checkbox]:checked+.star {
+        &:after {
+            position: absolute;
+            content: '\1F90E'
+        }
+    }
+    [type=checkbox]+.star.half {
+        width: 25px;
+        &:before {
+            content: '\1F90E';
+            position: absolute;
+        }
+        &:after {
+            content: '\1F90D';
+            position: absolute;
+            width: 12px;
+            overflow: hidden;
+        }
+    }
+    [type=checkbox] {
+        display: none;
+    }
+    .result {
+        font-size: 20px;
+        font-weight: bold;
+        padding: 0 16px;
+        position: relative;
+        top: 26px;
+        span {
+            font-size: 14px;
+            font-weight: normal;
+        }
+    }
+    .btn {
+        position: relative;
+        top: 26px;
+    }
 }
