--- a/resources/front/sass/app.scss
+++ b/resources/front/sass/app.scss
@@ -162,4 +162,20 @@ span.rem {
         position: relative;
         top: 26px;
     }
+
+    .sort-filter-buttons {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 10px;
+        font-size: 12px;
+        height: 100%;
+        position: relative;
+        button,
+        a {
+            top: -4px;
+            position: relative;
+            font-size: 12px;
+        }
+    }
 }
