--- a/resources/back/sass/app.scss
+++ b/resources/back/sass/app.scss
@@ -9,7 +9,9 @@
 
 
 body {
-    background-image: url('../../back/images/fundearth.jpg');
+    background-image: url('../../back/images/fundforest.jpg');
+    background-size:contain;
+    background-repeat:round;
   }
 
 .stories-list {
