--- a/resources/front/sass/app.scss
+++ b/resources/front/sass/app.scss
@@ -14,12 +14,8 @@ body {
     background-repeat:round;
   }
 
-//   .card-body{
-//     background-image: url('../../back/images/fundearth.jpg');
-//     background-size:contain;
 
-//   }
-  .story-line {
+.story-line {
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -44,9 +40,7 @@ body {
     }
 }
 
-
-
-  .stories-list {
+.stories-list {
     .story {
 
         .story-info  {
@@ -83,10 +77,9 @@ body {
             gap: 10px;
         }
     }
+    }
 }
 
-
-}
 
 [data-gallery="0"] {
     display: none;
@@ -162,20 +155,41 @@ span.rem {
         position: relative;
         top: 26px;
     }
+}
 
-    .sort-filter-buttons {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 10px;
-        font-size: 12px;
-        height: 100%;
+.sort-filter-buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+    font-size: 12px;
+    height: 100%;
+    position: relative;
+    button,
+    a {
+        top: -4px;
         position: relative;
-        button,
-        a {
-            top: -4px;
-            position: relative;
-            font-size: 12px;
-        }
+        font-size: 12px;
+    }
+}
+
+.gallery {
+
+     margin: 0 10px;
+     display: flex;
+     flex-direction: column;
+     background-color:beige;
+
+      h1{
+        font-size: 60px;
+    
+        text-align: center;
+       
+    }
+    img {
+        width: 400px;
+        height: auto;
+        margin-right: 10px;
+  
     }
 }
