--- a/resources/front/sass/app.scss
+++ b/resources/front/sass/app.scss
@@ -124,19 +124,19 @@ span.rem {
             content: '\1F90E'
         }
     }
-    [type=checkbox]+.star.half {
-        width: 25px;
-        &:before {
-            content: '\1F90E';
-            position: absolute;
-        }
-        &:after {
-            content: '\1F90D';
-            position: absolute;
-            width: 12px;
-            overflow: hidden;
-        }
-    }
+    // [type=checkbox]+.star.half {
+    //     width: 25px;
+    //     &:before {
+    //         content: '\1F90E';
+    //         position: absolute;
+    //     }
+    //     &:after {
+    //         content: '\1F90D';
+    //         position: absolute;
+    //         width: 12px;
+    //         overflow: hidden;
+    //     }
+    // }
     [type=checkbox] {
         display: none;
     }
